--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -4,6 +4,7 @@
   "input": "Input",
   "report": "Report",
   "settings": "Settings",
+  "language": "Language",
   "balance": "Current Balance",
   "income": "Income",
   "expense": "Expense",
